@@ -2,6 +2,7 @@
  - fix: set visibility to private based on available licenses
  - fix: calling the CLI 'dcoraid-upload-task --help' raised exception
  - fix: add timeout to api.post
+ - fix: remove time DCOR-Aid waits for the server from average upload rate
  - enh: unselected license in upload dialog for example data
  - enh: increase logging verbosity
 0.11.5
